--- a/example/src/build.html
+++ b/example/src/build.html
@@ -54,6 +54,55 @@
           box-shadow: 0 40px 0 -20px;
         }
       }
+
+      .cdk-global-overlay-wrapper, .cdk-overlay-container {
+        pointer-events: none;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+      }
+
+      .cdk-overlay-container {
+        position: fixed;
+        z-index: 1000;
+      }
+
+      .cdk-overlay-connected-position-bounding-box {
+        position: absolute;
+        z-index: 1000;
+        display: flex;
+        flex-direction: column;
+        min-width: 1px;
+        min-height: 1px;
+      }
+
+      .cdk-overlay-pane {
+        position: absolute;
+        pointer-events: auto;
+        box-sizing: border-box;
+        z-index: 1000;
+        display: flex;
+        max-width: 100%;
+        max-height: 100%;
+      }
+
+      .cdk-overlay-backdrop.cdk-overlay-backdrop-showing {
+        opacity: 1;
+      }
+
+      .cdk-overlay-backdrop {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        z-index: 1000;
+        pointer-events: auto;
+        -webkit-tap-highlight-color: transparent;
+        transition: opacity .4s cubic-bezier(.25,.8,.25,1);
+        opacity: 0;
+      }
     </style>
 
     <script src="https://unpkg.com/core-js/client/shim.min.js"></script>
